from home 12feb19

--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
     padding: 0px;
   }
   body {
+    background-image: url("http://yesofcorsa.com/wp-content/uploads/2015/08/3721_golden_gate_bridge.jpg");
     font-size: 120%;
-    background: #F8F8FF;
   }
  
   .header {
     width: 30%;
     margin: 50px auto 0px;
     color: white;
-    background: #5F9EA0;
     text-align: center;
     border: 1px solid #B0C4DE;
     border-bottom: none;
     border-radius: 10px 10px 0px 0px;
     padding: 20px;
+    background: rgb(85, 116, 200);
   }
   form, .content {
     width: 30%;
@@ -44,11 +44,12 @@
   }
   .btn {
     padding: 10px;
-    font-size: 15px;
+    font-size: 17px;
     color: white;
-    background: #5F9EA0;
+    background: rgb(85, 116, 200);
     border: none;
     border-radius: 5px;
+
   }
   .error {
     width: 92%; 
@@ -65,7 +66,4 @@
     background: #dff0d8; 
     border: 1px solid #3c763d;
     margin-bottom: 20px;
-  }
-
-
-  
+  }  
